@@ -284,9 +284,8 @@ true, meaning to accept the revert.
 
 =item C<[revert.strict]>
 
-A boolean value which, when set to true, completely disables the
-checkout command. The C<checkout.strict> variable takes precedence over
-c<revert.strict>. By default the checkout command is not disabled.
+A boolean value that, when true, disables the C<checkout> command. The
+C<checkout.strict> variable takes precedence over C<revert.strict>.
 
 When the checkout command is disabled, use the C<deploy> and C<revert>
 commands directly.
